--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title></title>
   </head>
   <body>
+    <main id="app">
+      <h3>{{title}}</h3>
+    </main>
     <script src="https://cdn.jsdeliver.net/npm/vue/dist/vue.js"></script>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
